Fixed minion sheet checkbox style and realigned some trash bins

--- a/scss/minion-sheet.scss
+++ b/scss/minion-sheet.scss
@@ -24,6 +24,10 @@ form.minion-sheet {
 
     #main-minion-form {
         margin-right: 12px;
+
+        a.item-delete {
+            align-self: center;
+        }
     }
 
 	#picture-td{
